--- a/package.json
+++ b/package.json
@@ -9,11 +9,18 @@
   },
   "dependencies": {
     "@devindex/vue-mask": "^2.0.3",
+    "axios": "^1.1.2",
     "core-js": "^3.8.3",
+    "dotenv": "^16.0.3",
+    "dotenv-webpack": "^8.0.1",
     "element-plus": "^2.2.17",
+    "lodash": "^4.17.21",
+    "v-contextmenu": "^3.0.0",
     "vue": "^3.2.13",
+    "vue-currency-input": "^3.0.1",
     "vue-moment": "^4.1.0",
-    "vue-router": "^4.1.5"
+    "vue-router": "^4.1.5",
+    "vue-simple-context-menu": "^4.0.4"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
